--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 *** sleep with power-down and watchdog timer
-The MCU can sleep for a determined period of time while it waits for something. In this case, the sleep operation requires a timer and a duration. The system can be put on sleep at power-down mode and it can wake up after a period of time using a watchdog timer. This is powerful combination to save power while the system is waiting for something or at least while it can save some power before taking the next step. This can be achieved here using one single line, for example: ~sleep::power_down::sleep<5s>()~. 
+The MCU can sleep for a determined period of time while it waits for something. In this case, the sleep operation requires a timer and a duration. The system can be put on sleep at power-down mode and it can wake up after a period of time using a watchdog timer. It's a powerful combination to save power while the system is waiting for something or at least while it can save some power before taking the next step. This can be achieved here using one single line, for example: ~sleep::power_down::sleep<5s>()~. 
 
 **** Case: reading sensor values at a regular interval of time
 #+BEGIN_SRC C++
@@ -26,9 +26,9 @@ int main() {
 ~128 bytes~ of code size compiled with ~avr-gcc 10.2.0~ and ~-Os -mmcu=attiny85~.
 
 ***** ~sleep::power_down::sleep<Duration>()~
-It configures an optimized timer at compile-time using the watchdog timer, it starts this timer and put the system on sleep mode. The next instruction after the sleep is executed after the interval of time defined by ~Duration~.
+It configures an optimized timer at compile-time using the watchdog timer, it starts this timer and put the system on sleep mode. The next instruction after the sleep is executed after the interval of time defined by ~Duration~ has passed.
 
-Some decisions are taken at compile-time to bring some possible runtime errors to the compile phase. The ~Duration~ must be a multiple of any possible watchdog timer prescaler, for example, at ATtiny85 there are the following prescalers: 16ms, 32ms, 64ms, 125ms, 250ms, 500ms, 1s, 2s, 4s and 8s. The duration can't be 17ms, for example. But, it can be 3s because this component will choose at compile-time an 8bits software counter to count from 1 to 3 to achieve 3s using the watchdog timer with 1s as prescaler. If the duration is equal to a prescaler value, then the software counter isn't used at all.
+Some decisions are taken at compile-time to bring some possible runtime errors to the compile phase. The ~Duration~ must be a multiple of any possible watchdog timer prescaler, for example, the ATtiny85 have the following prescalers: 16ms, 32ms, 64ms, 125ms, 250ms, 500ms, 1s, 2s, 4s and 8s. The duration can't be 17ms, for example. But, it can be 3s because this component will choose at compile-time an 8bits software counter to count from 1 to 3 to achieve 3s using the watchdog timer with 1s as prescaler. If the duration is equal to a prescaler value, then the software counter isn't used at all.
 
 #+BEGIN_SRC C++
 sleep::power_down::sleep<17ms>(); //compile-timer error
@@ -62,13 +62,13 @@ Disables the watchdog timer that was defined.
 ***** ~watchdog::reset()~
 Resets the watchdog timer.
 
-**** Supported MCUs
+*** Supported MCUs
 1. ATtiny85
 
-**** Requirements
+*** Requirements
 1. ~avr-gcc~ with ~-std=c++17~
 2. ~arv/io.h~
 
-**** TODO
+*** [TODO]
 1. Support to ATtiny13
 2. Allow idle sleep mode with *8-bit Timer/Counter*
