--- a/README.org
+++ b/README.org
@@ -70,14 +70,15 @@ Resets the watchdog timer.
 
 *** Supported MCUs
 1. ATtiny85
+2. ATtiny13A
 
 *** Requirements
 1. ~avr-gcc~ with ~-std=c++17~
 2. ~arv/io.h~
 
 *** [TODO]
-1. Support to ATtiny13.
-2. Allow idle sleep mode with *8-bit Timer/Counter*.
-3. Remove the dependency from ~avr/io.h~ implemeting an IO abstraction.
-4. Watchdog timer using the reset mode.
-5. Policies to ~interrupt::atomic~.
+1. Allow idle sleep mode with *8-bit Timer/Counter*.
+2. Remove the dependency from ~avr/io.h~ implemeting an IO abstraction.
+3. Watchdog timer using the reset mode.
+4. Policies to ~interrupt::atomic~.
+
